# YOLOv8Baseline

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: config.py  model_cfg.yaml
data/BuildingsInstanceSegmentationImageDataset/DataLoader/: config.json  load_prepare_data.py
data/BuildingsInstanceSegmentationImageDataset/DataLoader/Data_test/train_yolov8_converted/labels/: austin16-1-_png_jpg.rf.e0912fc76ebff102e3d0deb4aff25624.txt
data/RoboflowLoad/: load_data.py
data/SpaceNet4/splitData/: split_data.py
data/convert/: convert_coco_yolo_buildings_instance_segmentation.py  convert_geojson2coco.py
src/inference/: predict.py
src/train/: data.yaml  train.py
src/train/Callbacks/: callbacks.py
src/train/CustomTrain/: model.py  train.py  trainer.py
src/train/MLflowTracking/: cust_mlflow.py
src/train/MainTrain/: data.yaml  train.py
src/train/MainTrain/runs/segment/YOLOv8_ver0/: args.yaml  results.csv
src/train/MainTrain/train/: train.py
src/train/MainTrain/train/TrainDataConfigs/: data_BISID.yaml  data_BISID_SN4.yaml  data_SN4.yaml
src/train/runs/mlflow/0/: meta.yaml
src/train/runs/mlflow/141597308234592425/: meta.yaml
src/train/runs/mlflow/141597308234592425/20b66601b5044f289e7a5f878b69b1b1/: meta.yaml
src/train/runs/mlflow/141597308234592425/20b66601b5044f289e7a5f878b69b1b1/artifacts/: args.yaml  results.csv
src/train/runs/mlflow/141597308234592425/20b66601b5044f289e7a5f878b69b1b1/params/: model  name  save_dir
src/train/runs/mlflow/141597308234592425/20b66601b5044f289e7a5f878b69b1b1/tags/: mlflow.source.git.commit  (+1 more)
(+12 files in other folders)
