[tool.poetry]
name = "yolov8baseline"
version = "0.1.0"
description = "YOLO8 TrainVal"
authors = ["Eloof <t.vlasov23@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "^8.0.200"
roboflow = "^1.1.7"
black = "^23.10.0"
pylint = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
