[tool.poetry]
name = "yolov8baseline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
roboflow = "^1.1.7"
ultralytics = "^8.0.200"
torch = {version = "^2.1.0+cu118", source = "pytorch"}
torchvision = "^0.16.0+cu118"
torchaudio = "^2.1.0+cu118"
black = "^23.10.0"
pylint = "^3.0.2"
mlflow = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "default"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118/"
priority = "supplemental"

